--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Compiled class file
 *.class
-/target
-/.idea
-.mvn
 mvnw
 mvnw.cmd
 
@@ -25,3 +22,6 @@ mvnw.cmd
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+/.idea/
+/.mvn/
